--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,14 +3,14 @@ on:
   push:
 
 jobs:
-  test:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest-16-cores
+  install:
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Run Cypress Tests
-      run: npm test
+      - name: Run Cypress Tests
+        run: npm test
