--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^12.17.2",
+    "cypress-recurse": "^1.35.2",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "3.0.0",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "dotenv": "^16.3.1"
   }
 }
